--- a/ch2.tex
+++ b/ch2.tex
@@ -398,3 +398,12 @@ There are no exercises in this section.
   \end{equation}
   in~$\Mor_{\mathcal{A}}(G\circ F(A),A)$ where~$\identity_{G(B)}\in\Mor_{\mathcal{A}}(G(B),G(B))$.
 \end{exercise}
+
+\begin{exercise}
+  Taking~$f\colon M\otimes_A N\to P$, transform it to~$g\colon M\to\Hom_A(N,P)$ by defining~$g(m)(-)\colonequals f(m\otimes-)$. This is a bijection:
+  \begin{description}
+    \item[injective] Take~$f_1,f_2$ such that~$f_1\neq f_2$, \ie, there exist~$m\in M$ and~$n\in N$ such that~$f_1(m\otimes n)\neq f_2(m\otimes n)$. Taking the corresponding~$g_i$ we obtain~$g_1(m)(-)\neq g_2(m)(-)$ as their values in the point~$n$ differ.
+
+    \item[surjective] By the universal property of the tensor product.
+  \end{description}
+\end{exercise}
