--- a/solutions.tex
+++ b/solutions.tex
@@ -73,6 +73,7 @@
 \newcommand\identity{\mathrm{id}}
 \newcommand\projection{\pi}
 
+\DeclareMathOperator\Hom{Hom}
 \DeclareMathOperator\Image{Im}
 \DeclareMathOperator\Mor{Mor}
 \DeclareMathOperator\res{res}
