Solved 2.5.D: the adjointness of tensor products and the Hom functor, I am proud of myself

--- a/ch2.tex
+++ b/ch2.tex
@@ -365,6 +365,7 @@ There are no exercises in this section.
 \section{Adjoints}
 
 \begin{exercise}
+  \label{exercise:25a}
   Extending the diagram given in~(2.5.0.2) we obtain
   \begin{equation}
     \begin{tikzpicture}[description/.style = {fill = white, inner sep = 2pt}, baseline=(current bounding  box.center)]
@@ -406,4 +407,10 @@ There are no exercises in this section.
 
     \item[surjective] By the universal property of the tensor product.
   \end{description}
+\end{exercise}
+
+\begin{exercise}
+  It just boils down to unwinding the diagram from~\autoref{exercise:25a}. Set~$F\colonequals-\otimes_A N$ and~$G\colonequals\Hom_A(N,-)$, $A\colonequals M$, $A'\colonequals M'$, $B\colonequals P$ and~$B'\colonequals P'$. Now taking~$h\colon M'\otimes_A N\to P$, chasing the diagram using~$\tau_{A,B}\circ Ff^*$ we obtain~$h\circ (f\otimes\identity)(-_M\otimes-_N)$ first and then~$h(f(-_M))(-_N)$.
+
+  Chasing the diagram in the other direction, through~$f^*\circ\tau_{A',B}$ we first obtain~$h(-_M)(-_N)$ and then end up with~$h(f(-_M))(-_N)$, hence equality. The rest is analogous, now you have to compose with the map~$g\colon B\to B'$.
 \end{exercise}
