--- a/solutions.tex
+++ b/solutions.tex
@@ -70,6 +70,7 @@
 
 \newcommand\ball{\mathrm{B}}
 \newcommand\category[1]{\mathsf{#1}}
+\newcommand\groupification{\mathrm{H}}
 \newcommand\identity{\mathrm{id}}
 \newcommand\projection{\pi}
 
