--- a/solutions.tex
+++ b/solutions.tex
@@ -74,8 +74,10 @@
 \newcommand\identity{\mathrm{id}}
 \newcommand\projection{\pi}
 
+\DeclareMathOperator\coker{coker}
 \DeclareMathOperator\Hom{Hom}
-\DeclareMathOperator\Image{Im}
+\DeclareMathOperator\homology{H}
+\DeclareMathOperator\image{im}
 \DeclareMathOperator\Mor{Mor}
 \DeclareMathOperator\res{res}
 
