--- a/ch2.tex
+++ b/ch2.tex
@@ -473,7 +473,7 @@ There are no exercises in this section.
   This is by breaking apart the short exact sequences and putting them back together equivalent to the definition.
 \end{exercise}
 
-\begin{exercise}
+\begin{exercise} % TODO do this
   \begin{enumerate}
     \item 
 
