--- a/ch3.tex
+++ b/ch3.tex
@@ -23,8 +23,8 @@
   \end{enumerate}
 \end{exercise}
 
-\begin{exercise} % TODO
-  I must think some more about this one, reading the category theory chapter some more.
+\begin{exercise}
+  As we have maps~$\mathcal{F}(\bigcup U_i)\to\mathcal{F}(U_i)$ (or arbitrary unions of~$U_i$) this is a limit: the arrows from our desired object map \emph{to} all the objects as described in~2.4.4.
 \end{exercise}
 
 \begin{exercise}
@@ -33,4 +33,16 @@
 
     \item Analogous.
   \end{enumerate}
+\end{exercise}
+
+\begin{exercise}
+  \begin{enumerate}
+    \item Such functions are defined in their points, if all the restrictions agree for a covering, the functions are obviously equal. The identity axiom is satisfied. But given a covering on which all restrictions agree we can just paste together a global function, hence the gluability axiom is satisfied~too.
+
+    \item Analogous.
+  \end{enumerate}
+\end{exercise}
+
+\begin{exercise}
+  The presheaf axioms are trivially satisfied, local functions restrict easily. The identity axiom is obvious too. For the gluability: observe that the compatibility boils down to defining a function on the \emph{connected components} of the covering and therefore is satisfied too.
 \end{exercise}
