Solved 3.3 (not everything is complete though)

--- a/solutions.tex
+++ b/solutions.tex
@@ -1,6 +1,7 @@
 \documentclass[oneside, openany]{memoir}
 \usepackage{amsfonts}
 \usepackage[leqno]{amsmath}
+\usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{colonequals}
 \usepackage{enumitem}
@@ -80,6 +81,7 @@
 \DeclareMathOperator\image{im}
 \DeclareMathOperator\Mor{Mor}
 \DeclareMathOperator\res{res}
+\DeclareMathOperator\SheafHom{\mathcal{H}om}
 
 \title{Solutions to Foundations of Algebraic Geometry}
 \author{Pieter Belmans}
