--- a/solutions.tex
+++ b/solutions.tex
@@ -7,6 +7,7 @@
 \usepackage{enumitem}
 \usepackage{hyperref}
 \usepackage{mathabx}
+\usepackage{mathtools}
 \usepackage{thmtools}
 \usepackage{tikz}
 \usepackage{xspace}
@@ -71,6 +72,7 @@
 
 \newcommand\ball{\mathrm{B}}
 \newcommand\category[1]{\mathsf{#1}}
+\newcommand\dd{\;\!\mathrm{d}}
 \newcommand\groupification{\mathrm{H}}
 \newcommand\identity{\mathrm{id}}
 \newcommand\projection{\pi}
