Straight-forward is written as straightforward

--- a/ch3.tex
+++ b/ch3.tex
@@ -77,7 +77,7 @@
 \end{exercise}
 
 \begin{exercise}
-  As germs in the stalk~$\mathcal{F}_x$ are equivalence classes of functions defined in the neighbourhood modulo equality on a (smaller) neighbourhood, we can define the~$\mathcal{O}_{X,x}$\nobreakdash-module structure on~$\mathcal{F}_x$ by defining it on representatives of these classes. By commutativity of~(3.2.12.1) this is well defined. The actual checking of the structure is straight-forward and familiar.
+  As germs in the stalk~$\mathcal{F}_x$ are equivalence classes of functions defined in the neighbourhood modulo equality on a (smaller) neighbourhood, we can define the~$\mathcal{O}_{X,x}$\nobreakdash-module structure on~$\mathcal{F}_x$ by defining it on representatives of these classes. By commutativity of~(3.2.12.1) this is well defined. The actual checking of the structure is straightforward and familiar.
 \end{exercise}
 
 
