--- a/ch3.tex
+++ b/ch3.tex
@@ -137,3 +137,10 @@
 
   The failure of the sheaf axioms is for tomorrow.
 \end{exercise}
+
+
+\section{Properties determined at the level of stalks, and sheafification}
+
+\begin{exercise}
+  Assume it is not injective, \ie, there are sections~$f$ and~$g$ in~$\mathcal{F}(U)$ such that the product of their values in the stalks in~$U$ is equal. Every value arises by construction from a section on a neighbourhood, hence for the intersection of these neighbourhoods the restrictions of~$f$ and~$g$ have to agree. Now use the identity axiom because~$\mathcal{F}$ is a separated presheaf, which leads to~$f=g$, a contradiction.
+\end{exercise}
