--- a/ch3.tex
+++ b/ch3.tex
@@ -106,7 +106,7 @@
   If~$\mathcal{G}$ is a sheaf of abelian groups, morphisms~$\mathcal{F}\to\mathcal{G}$ carry a natural group structure, by pointwise addition. The neutral element is the zero map.
 \end{exercise}
 
-\begin{exercise} % TODO expand
+\begin{exercise}
   \begin{enumerate}
     \item By definition
       \begin{equation}
@@ -126,8 +126,24 @@
   We now check the conditions required for a presheaf. Obviously~$\res^{\ker}_{U,U}$ is the identity map and the commutativity of the restriction triangle follows from the uniqueness of the restriction maps.
 \end{exercise}
 
-\begin{exercise} % TODO draw diagram and finish exercise
-  I promise to draw this diagram first thing tomorrow, right now I'm not in the mood.
+\begin{exercise}
+  Given a presheaf morphism~$\phi\colon\mathcal{F}\to\mathcal{G}$, we would like to characterize~$\coker_{\textrm{pre}}f$ by the universal property
+  \begin{equation}
+    \begin{tikzpicture}[description/.style = {fill = white, inner sep = 2pt}, baseline=(current bounding  box.center)]
+      \matrix (m) [matrix of math nodes, row sep = 3em, column sep = 3em, text height = 1.5ex, text depth = 0.25ex]
+      {
+        & & \mathcal{H} \\
+        \mathcal{F} & \mathcal{G} & \coker_{\textrm{pre}}f \\
+      };
+      \path[->] (m-2-1) edge node[below] {$\phi$} (m-2-2)
+                (m-2-2) edge node[below] {$p$}    (m-2-3)
+                (m-2-1) edge node[auto]  {$0$}    (m-1-3)
+                (m-2-2) edge                      (m-1-3);
+      \path[->, dashed] (m-2-3) edge node[right] {$\exists!$} (m-1-3);
+    \end{tikzpicture}.
+  \end{equation}
+
+  Defining~$(\coker_{\textrm{pre}}\phi)(U)\colonequals\coker\phi(U)$, we can conclude that the universal property characterizes this definition because categorical properties of presheaves and presheaf morphisms are verified on open sets. The map~$p$ is induced by the definition and the map~$\coker_{\textrm{pre}}\phi$ exists by the ``check on open sets'' mantra and is unique for the same reason.
 \end{exercise}
 
 \begin{exercise}
