--- a/ch3.tex
+++ b/ch3.tex
@@ -173,3 +173,7 @@
 \begin{exercise}
   Assume the map is not injective, \ie, there are sections~$f$ and~$g$ in~$\mathcal{F}(U)$ such that the product of their values in the stalks in~$U$ is equal. Every value arises by construction from a section on a neighbourhood, hence for the intersection of these neighbourhoods the restrictions of~$f$ and~$g$ have to agree. Now use the identity axiom because~$\mathcal{F}$ is a separated presheaf, which leads to~$f=g$, a contradiction.
 \end{exercise}
+
+\begin{exercise}
+  The notion of compatible germ corresponds to the notion of compatible sections in the gluability axiom: a germ is an equivalence class represented by an open neighbourhood with a section on it, which induces equality for the restrictions~$U_i\cap U_j$ under the equivalence relation on the stalks. Now glue together a section over~$U$, this serves as the preimage of a product of compatible germs.
+\end{exercise}
