--- a/ch3.tex
+++ b/ch3.tex
@@ -177,3 +177,12 @@
 \begin{exercise}
   The notion of compatible germ corresponds to the notion of compatible sections in the gluability axiom: a germ is an equivalence class represented by an open neighbourhood with a section on it, which induces equality for the restrictions~$U_i\cap U_j$ under the equivalence relation on the stalks. Now glue together a section over~$U$, this serves as the preimage of a product of compatible germs.
 \end{exercise}
+
+\begin{exercise}
+  Given a germ~$f\in\mathcal{F}_p$, represented by~$(f_U,U)$ where~$p\in U$ open, we define
+  \begin{equation}
+    \phi_p\colon \overline{(f_U,U)}\mapsto\overline{(\phi(f_U),U)}.
+  \end{equation}
+
+  By compatibility of restrictions, this is well-defined.
+\end{exercise}
