--- a/ch3.tex
+++ b/ch3.tex
@@ -213,6 +213,12 @@
       \end{equation}
       We have~$\phi_1(X)(p)=p$ and~$\phi_2(X)(p)=p'$ as possible candidates, yet the induced stalk morphisms are equal.
 
-    \item Using the same setup: we have trivial stalk isomorphisms, yet the presheaves are not isomorphic.
+    \item Using the same setup: we have trivial stalk isomorphisms, yet by construction the presheaves are not isomorphic.
   \end{enumerate}
+\end{exercise}
+
+\begin{exercise}
+  The standard argument: take~$\mathcal{F}_1^{\sh}$ and~$\mathcal{F}_2^{\sh}$ both sheafifications of~$\mathcal{F}$. There are unique morphisms~$\mathcal{F}_1^{\sh}\to\mathcal{F}_2^{\sh}$ and~$\mathcal{F}_2^{\sh}\to\mathcal{F}_1^{\sh}$. Now we can compose these. But if I give you the identity map between both compositions, you have to agree we've obtained isomorphisms, right?
+
+  If~$\mathcal{F}$ already is a sheaf, setting~$\mathcal{F}^{\sh}\colonequals\mathcal{F}$ satisfies the conditions of sheafification if~$\sh=\identity$: the map~$f$ equals~$g$ and is therefore uniquely defined.
 \end{exercise}
