--- a/solutions.tex
+++ b/solutions.tex
@@ -84,6 +84,7 @@
 \DeclareMathOperator\image{im}
 \DeclareMathOperator\Mor{Mor}
 \DeclareMathOperator\res{res}
+\DeclareMathOperator\sh{sh}
 \DeclareMathOperator\SheafHom{\mathcal{H}om}
 
 \title{Solutions to Foundations of Algebraic Geometry}
